crates/djls-semantic/tests/snapshots/corpus__repos__pretix__src__pretix__base__templatetags__urlreplace.py.snap
---
source: crates/djls-semantic/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "src.pretix.base.templatetags.urlreplace::tag::url_replace":
    arg_constraints:
      - Min: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: request
        required: true
        kind: Variable
        position: 0
      - name: pairs
        required: false
        kind: VarArgs
        position: 1
    as_var: strip
filter_arities: {}
block_specs: {}
